Remove redundant separator at end of the spelling correction context menu

In some editing cases (reporting a issue) inspect is not the last item.

BUG=695800

Review-Url: https://codereview.chromium.org/2713333002
Cr-Commit-Position: refs/heads/master@{#453565}

Former-commit-id: 0f26be86266baa146ff07b69aace687393d8fc36